# django-ddd

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  setup.cfg  setup.py
.github/workflows/: django.yml  pythonpublish.yml
django_ddd/: apps.py
django_ddd/_app_template/: __init__.py
django_ddd/_app_template/infrastructure/: apps.py-tpl
django_ddd/apps_config/: __init__.py  clean_app_config.py
django_ddd/management/commands/: start_clean_app.py
dummy_app/: __init__.py
dummy_app/infrastructure/: admin.py  apps.py  models.py
tests/: settings.py
tests/django_ddd/apps_config/: test_clean_app_config.py
tests/django_ddd/management/commands/: test_start_clean_app.py
