[metadata]
name = django-ddd
version = 0.1
description = An app for a cleaner Django
long_description = file: README.rst
url = https://github.com/jdiazromeral/django-ddd
author = Javier Díaz-Romeral
author_email = javierdiazromeral@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Framework :: Django :: 3.0
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities

[options]
include_package_data = true
packages = find: